# AgriSatAnalytics

./: .replit  README.md  agro_insight.db  alembic.ini  app.py  config.py  database.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: Pasted--ROLA-Jeste-seniorem-architektem-Python-ML-Piszesz-REPO-agro-insight-free-KONTRAINTY-I-1747021705116.txt  Pasted-Authentication-Planet-APIs-use-different-authentication-mechanisms-depending-on-the-base-domain-Th-1747056810754.txt  Pasted-Skip-to-main-content-Planet-Docs-DOCUMENTATION-Platform-Develop-Data-Guides-Help-Log-In-Sig-1747057798411.txt
data/user/: achievements.json
data/weather_gas_cache/: weather_gas_report_20250523_190543.json
migrations/: env.py
models/: llm_agents.py  market_signals.py  yield_forecast.py
pages/: 01_Data_Ingest.py  01_Field_Manager.py  02_Field_Analysis.py  03_Yield_Forecast.py  04_Market_Signals.py  05_Reports.py  06_Debug_Dashboard.py  07_Insights_Dashboard.py  08_Satellite_Monitor.py  09_Expert_Reasoning.py  10_Weather_Gas_Analysis.py  11_Data_Sources.py  12_Energy_Trading_Signals.py  13_Strategy_Simulator.py  14_AI_Intelligence.py
reports/: ISR_brief.html  ISR_brief.md
reports/kharg_island/: kharg_island_activity_summary.json
reports/natanz/: natanz_activity_summary.json
utils/: api_examples.py  data_access.py  gemini_integration.py  market_reports.py  mock_data.py  predictions.py  processing.py  satellite_energy_correlations.py  satellite_monitor.py  strategy_optimizer.py  visualization.py  weather_gas_analysis.py
(+3 files in other folders)
