[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "diskcache>=5.6.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "prophet>=1.1.6",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "geopandas>=1.0.1",
    "shapely>=2.1.0",
    "sentinelhub>=3.11.1",
    "tenacity>=9.1.2",
    "markdown>=3.8",
    "yfinance>=0.2.60",
    "psutil>=7.0.0",
    "pandas>=2.2.3",
    "folium>=0.19.5",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.15.2",
]
